--- a/src/app/[locale]/menu/menuComponents/card/ServerCard.module.css
+++ b/src/app/[locale]/menu/menuComponents/card/ServerCard.module.css
@@ -4,6 +4,10 @@
   background-color: var(--color5);
   border-radius: 10px;
   overflow: hidden;
+  background: linear-gradient(236.43deg, #3f4c39 21.1%, #262626 68.07%);
+  box-shadow: -10px 10px 24px rgba(0, 0, 0, 0.25),
+    inset -40px 40px 90px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
 }
 
 .cardWrapper img {
@@ -13,11 +17,77 @@
 }
 
 .cardInfoDiv {
-  height: 100%;
+  height: 50%;
   padding: 15px;
   text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .cardInfoDiv h2 {
   text-transform: uppercase;
+}
+
+.tagsPriceWrap {
+  display: flex;
+  justify-content: space-between;
+}
+.tagsPriceWrap div {
+  display: flex;
+}
+
+.details {
+  display: flex;
+  gap: 8px;
+}
+.details div {
+  width: 44px;
+  height: 52px;
+  border-radius: 9px;
+  font-size: 30px;
+  background: #007aff;
+  color: white;
+  opacity: 0.8;
+  border-radius: 9px;
+  position: relative;
+}
+
+.eachItem {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  opacity: 80%;
+}
+
+.details div:nth-child(1) {
+  font-family: var(--font1);
+  font-weight: 900;
+}
+.details div:nth-child(2) {
+  color: rgba(255, 0, 0, 0.815);
+  background-color: var(--color2);
+}
+.details div:nth-child(3) {
+  background-color: hsla(144, 100%, 38%, 0.8);
+}
+
+.priceWrap {
+  width: 90px;
+  height: 52px;
+  background-color: var(--color2);
+  display: flex;
+  justify-content: center;
+  font-size: 25px;
+  color: var(--color4);
+  font-weight: 900;
+  border-radius: 9px;
+  align-items: center;
+}
+
+.priceWrap span {
+  font-size: 13px;
+  margin-top: 14px;
+  margin-left: 5px;
 }
