--- a/src/components/Header/Navigations/LanguageSwitcher/LanguageSwitcher.module.css
+++ b/src/components/Header/Navigations/LanguageSwitcher/LanguageSwitcher.module.css
@@ -1,10 +1,11 @@
 .languageSwitcher {
   margin-right: 20px;
   margin-left: 20px;
+  margin-top: -4px;
 }
 
 .languageDropdown {
-  /* display: none; */
+  display: none;
   position: absolute;
   z-index: 1;
 }
@@ -12,9 +13,9 @@
   height: 0px;
 }
 
-/* .languageSwitcher:hover .languageDropdown {
+.languageSwitcher:hover .languageDropdown {
   display: block;
-} */
+}
 .open {
   display: block;
 }
