--- a/src/app/css/container.css
+++ b/src/app/css/container.css
@@ -24,6 +24,7 @@
   padding: var(--section-padding-xl);
   width: 100%;
   margin: 0 auto;
+  overflow: hidden;
 }
 .section-light {
   background-color: var(--color4-10);
