--- a/src/components/Reservation/ComponentNine/ComponentNine.module.css
+++ b/src/components/Reservation/ComponentNine/ComponentNine.module.css
@@ -1,7 +1,6 @@
 .wrapper {
   display: flex;
-  justify-content: space-between; /* Ensure items are on the left and right */
-  align-items: center; /* Vertically center items in the wrapper */
+  justify-content: space-between;
   position: relative;
 }
 .textWrapper {
@@ -9,14 +8,16 @@
   position: relative;
 }
 
+.titlesWrapper h2 {
+  width: 80%;
+  background-color: rebeccapurple;
+}
 .titlesWrapper {
-  margin-top: 10%;
-  margin-bottom: 30%;
+  margin-top: 20%;
+  margin-bottom: 40%;
   max-width: max-content;
   overflow: hidden;
   padding: 50px 0;
-}
-.titlesWrapper h2 {
 }
 
 .lowerTextWrap {
@@ -24,31 +25,22 @@
   width: 50%;
 }
 
-.chefContainer {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  min-height: 700px;
-}
-.chefContainer img {
-  object-fit: contain;
-  margin-left: -40px;
-}
-
 .svgWrapper {
-  position: absolute;
-  top: 50%; /* Position from the top */
-  transform: translateY(-50%); /* Adjust to vertically center */
+  position: relative;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
-  height: 100%;
-  left: -150%;
-  margin-right: -70px;
-  z-index: -1;
+  align-items: center;
 }
 
-.svgWrapper svg {
-  width: 2000px;
-  height: auto;
-  object-fit: fill;
+.svg {
+  position: absolute;
+  top: 50%;
+  left: 35%;
+  transform: translate(-50%, -50%);
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  object-fit: cover;
 }
