--- a/src/components/Story/ComponentSeven/ComponentSeven.module.css
+++ b/src/components/Story/ComponentSeven/ComponentSeven.module.css
@@ -2,19 +2,16 @@
   display: flex;
   justify-content: space-between; /* Ensure items are on the left and right */
   align-items: center; /* Vertically center items in the wrapper */
-  position: relative;
 }
+
 .textWrapper {
   width: 50%;
-  position: relative;
 }
 
 .titlesWrapper {
-  margin-top: 10%;
   margin-bottom: 30%;
   max-width: max-content;
   overflow: hidden;
-  padding: 50px 0;
 }
 .titlesWrapper h2 {
   padding-left: 70px;
@@ -40,23 +37,25 @@
 }
 .chefContainer img {
   object-fit: contain;
+  margin: 100px 0;
   margin-left: -40px;
 }
-
 .svgWrapper {
-  position: absolute;
-  top: 50%; /* Position from the top */
-  transform: translateY(-50%); /* Adjust to vertically center */
+  position: relative;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
-  height: 100%;
-  left: -150%;
-  margin-right: -100px;
-  z-index: -1;
+  align-items: center;
 }
 
-.svgWrapper svg {
-  width: 2000px;
-  height: auto;
-  object-fit: fill;
+.svg {
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  transform: translate(-50%, -50%);
+  height: 100%;
+  width: 100vw;
+  z-index: -1;
+  object-fit: cover;
 }
