--- a/src/app/[locale]/menu/menuComponents/menu.module.css
+++ b/src/app/[locale]/menu/menuComponents/menu.module.css
@@ -13,12 +13,9 @@
   margin-bottom: 60px;
 }
 .itemContainer {
-  display: grid;
-  grid-template-columns: repeat(
-    auto-fit,
-    minmax(200px, 1fr)
-  ); /* Each card is 200px, but adjusts to fit available space */
-  gap: 20px; /* Spacing between cards */
-  padding: 20px; /* Padding around the container */
-  justify-items: center; /* Centers the cards within their grid cells */
+  display: flex;
+  flex-wrap: wrap; /* Allows items to wrap to the next line if needed */
+  gap: 20px; /* Adds spacing between the cards */
+  justify-content: center; /* Centers the cards horizontally */
+  padding: 20px; /* Adds padding around the container */
 }
