--- a/src/components/ComponentEight/ComponentEight.module.css
+++ b/src/components/ComponentEight/ComponentEight.module.css
@@ -9,17 +9,14 @@
   object-fit: cover;
   width: 100%;
   min-height: 500px;
-  /* box-shadow: -40px 35px 45px rgba(0, 0, 0, 0.425); */
 }
 .textWrapper {
   width: 50%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
 }
 .textWrapper h2 {
   width: 100px;
-  margin-top: -100px;
 }
 .textWrapper p {
   padding-top: 40px;
@@ -34,5 +31,12 @@
   }
   .componentTwoWrapper div {
     width: 100%;
+  }
+
+  .textWrapper h2 {
+    width: max-content;
+  }
+  .textWrapper p {
+    margin-bottom: 50px;
   }
 }
