--- a/src/components/ComponentNine/ReservationContactForm/ReservationContactForm.module.css
+++ b/src/components/ComponentNine/ReservationContactForm/ReservationContactForm.module.css
@@ -1,15 +1,20 @@
 .reservationWrapper {
-  width: 100%;
   max-width: 600px;
   z-index: 5;
   width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: auto 0;
+  padding: 50px 0;
+  height: 100%;
 }
+
 .reservation {
   height: 100%;
 }
 
 .form {
-  height: 100%;
   width: 100%;
   color: var(--color4);
   display: flex;
@@ -32,9 +37,10 @@
   background-color: transparent;
   min-height: 60px;
   background-color: var(--color4-40);
+  color: var(--color1);
 }
 .input::placeholder {
-  color: white;
+  color: var(--gray3);
 }
 
 .input:focus {
