--- a/src/components/ComponentSeven/ComponentSeven.module.css
+++ b/src/components/ComponentSeven/ComponentSeven.module.css
@@ -1,3 +1,14 @@
+.background {
+  background-image: url("/assets/svg/56degreeCut.svg");
+  background-size: cover; /* Adjust based on how you want the image to display */
+  background-position: center; /* Center the background */
+  width: 100vw;
+  height: 100%;
+  position: absolute;
+  margin-left: -150px;
+  z-index: -1;
+}
+
 .wrapper {
   display: flex;
   justify-content: space-between; /* Ensure items are on the left and right */
@@ -9,24 +20,21 @@
 }
 
 .titlesWrapper {
-  margin-bottom: 30%;
-  max-width: max-content;
-  overflow: hidden;
+  margin-bottom: 20%;
+  /* max-width: max-content; */
 }
 .titlesWrapper h2 {
-  padding-left: 70px;
-}
-
-.titlesWrapper p {
-  padding-right: 15%;
-  margin-top: 5%;
   text-align: right;
 }
 
+.titlesWrapper p {
+  margin-top: 5%;
+  text-align: right;
+  padding-right: 60px;
+}
+
 .lowerTextWrap {
-  margin-bottom: 30%;
-  width: 70%;
-  padding-left: 15%;
+  width: 60%;
 }
 
 .chefContainer {
@@ -37,25 +45,6 @@
 }
 .chefContainer img {
   object-fit: contain;
-  margin: 100px 0;
+  /* margin: 100px 0; */
   margin-left: -40px;
-}
-.svgWrapper {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.svg {
-  position: absolute;
-  top: 50%;
-  left: 40%;
-  transform: translate(-50%, -50%);
-  height: 100%;
-  width: 100vw;
-  z-index: -1;
-  object-fit: cover;
 }
