--- a/src/components/ComponentNine/ComponentNine.module.css
+++ b/src/components/ComponentNine/ComponentNine.module.css
@@ -2,7 +2,7 @@
   background-image: url("/assets/svg/56degreeCut.svg");
   background-size: cover; /* Adjust based on how you want the image to display */
   background-position: center; /* Center the background */
-  width: 100vw;
+  width: 120vw;
   height: 100%;
   position: absolute;
   margin-left: -100px;
@@ -31,22 +31,37 @@
   margin-bottom: 30%;
   width: 80%;
 }
-
-@media (max-width: 1200px) {
-}
-
-/* Break point 992px */
-@media (max-width: 992px) {
-}
-
-/* Break point 768px */
 @media (max-width: 768px) {
+  .background {
+    margin-left: -15%;
+  }
+  .wrapper {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .textWrapper {
+    max-width: 100%;
+  }
+  .lowerTextWrap {
+    margin-bottom: 0;
+  }
+
+  .chefContainer {
+    min-height: 500px;
+  }
+  .chefContainer img {
+    margin-left: 0;
+  }
 }
 
-/* Break point 576px */
 @media (max-width: 576px) {
+  .lowerTextWrap {
+    width: 80%;
+  }
 }
 
-/* Break point 400px */
 @media (max-width: 400px) {
+  .background {
+    margin-left: -20px;
+  }
 }
