--- a/src/app/css/button.css
+++ b/src/app/css/button.css
@@ -1,20 +1,23 @@
 .button {
-  border: 2px solid var(--color4);
-  background-color: var(--color4);
+  border: 2px solid var(--color2);
+  background-color: var(--color2);
   color: var(--white);
   font-family: var(--font1);
   width: max-content;
-  border-radius: 12px;
+  border-radius: 4px;
   display: flex;
   align-items: center;
   gap: 5px;
   cursor: pointer;
   justify-content: center;
-  padding: 10px 20px;
+  padding: 8px 20px;
   transition: all 0.2s;
   font-size: 15px;
   font-weight: 700;
   text-transform: uppercase;
+}
+.button-small {
+  padding: 5px 10px;
 }
 
 /* button1 START */
@@ -28,7 +31,7 @@
   background-color: var(--color4);
 }
 .button-reverse:hover {
-  background-color: var(--color1);
+  background-color: var(--color2);
 }
 
 .button-bold {
